# bash_pattern

./: .gitignore  .travis.yml  Makefile.am  README  autogen.sh  bash_pattern.c  bash_pattern.h  bash_pattern_test.c  configure.ac
